--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,65 +1,277 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white">
 
     <data>
-            <variable
-                name="viewModel"
-                type="com.example.marsrealestate.details.DetailsViewModel" />
+
+        <variable
+            name="viewModel"
+            type="com.example.myProductApp.details.DetailsViewModel" />
     </data>
- <ScrollView
-    android:layout_width="match_parent"
-    android:background="@color/background"
-    android:layout_height="match_parent">
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        tools:context=".details.DetailsFragment">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/main_photo_image"
-            android:layout_width="0dp"
-            android:layout_height="266dp"
-            android:scaleType="centerCrop"
-            app:shapeAppearanceOverlay="@style/RoundedSquare"
-            app:imageUrl="@{viewModel.selectedProperty.img_src}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/backgrounds/scenic" />
-
-
-
-
-        <TextView
-            android:id="@+id/property_type_text"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@{viewModel.selectedProperty.type}"
-            android:textColor="@color/white"
-            android:fontFamily="@font/latolight"
-            android:textSize="39sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
-            tools:text="To Rent" />
+            tools:context=".details.DetailsFragment">
 
-        <TextView
-            android:id="@+id/price_value_text"
-            android:layout_width="wrap_content"
-            android:fontFamily="@font/latoregular"
-            android:text="@{String.format(`$%s /month`, String.valueOf(viewModel.selectedProperty.price))}"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/property_type_text"
-            tools:text="$100,000" />
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpager2"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_320sdp"
+                android:background="@color/card_light"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <Button
+                android:id="@+id/icon_image"
+                style="?attr/materialIconButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_15sdp"
+                app:icon="@drawable/ic_back"
+                app:iconTint="@color/black"
+                app:layout_constraintStart_toStartOf="@id/viewpager2"
+                app:layout_constraintTop_toTopOf="@id/viewpager2" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            <LinearLayout
+                android:id="@+id/slideDotLL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/_15sdp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="@+id/viewpager2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/property_type_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@{viewModel.selectedProduct.title}"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14ssp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/brand_text"
+                tools:text="Electronics" />
+
+            <TextView
+                android:id="@+id/price_value_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_6sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@{String.format(`$%s`, viewModel.selectedProduct.price)}"
+                android:textColor="@color/pink"
+                android:textSize="@dimen/_16ssp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/property_type_text"
+                tools:text="$1000" />
+
+            <TextView
+                android:id="@+id/brand_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@{viewModel.selectedProduct.brand}"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/viewpager2"
+                tools:text="H and M" />
+
+            <ImageView
+                android:id="@+id/star_image"
+                android:layout_width="@dimen/_8sdp"
+                android:layout_height="@dimen/_8sdp"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_9sdp"
+                android:src="@drawable/star_ic"
+                app:layout_constraintStart_toEndOf="@+id/brand_text"
+                app:layout_constraintTop_toBottomOf="@+id/viewpager2" />
+
+            <ImageView
+                android:id="@+id/discountImage"
+                android:layout_width="70dp"
+                android:layout_height="55dp"
+                android:src="@drawable/ic_discount"
+                app:layout_constraintEnd_toEndOf="@id/viewpager2"
+                app:layout_constraintTop_toTopOf="@id/viewpager2" />
+
+            <TextView
+                android:id="@+id/discountText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/latoregular"
+                android:text="@{String.format(@string/discount_format, viewModel.selectedProduct.discountPercentage)}"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_8ssp"
+                app:layout_constraintEnd_toEndOf="@+id/discountImage"
+                app:layout_constraintStart_toStartOf="@+id/discountImage"
+                app:layout_constraintTop_toTopOf="@+id/discountImage"
+                tools:text="18%" />
+
+            <TextView
+                android:id="@+id/offText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/latoregular"
+                android:gravity="center"
+                android:text="@string/off"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_8ssp"
+                app:layout_constraintEnd_toEndOf="@+id/discountText"
+                app:layout_constraintStart_toStartOf="@+id/discountText"
+                app:layout_constraintTop_toBottomOf="@+id/discountText" />
+
+            <TextView
+                android:id="@+id/rating_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@{String.format(`%.1f`, viewModel.selectedProduct.rating)}"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toEndOf="@+id/star_image"
+                app:layout_constraintTop_toBottomOf="@+id/viewpager2"
+                tools:text="4.5" />
+
+            <TextView
+                android:id="@+id/desc_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:fontFamily="@font/latoregular"
+                android:padding="@dimen/_10sdp"
+                android:text="@{viewModel.selectedProduct.description}"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/price_value_text"
+                app:layout_constraintTop_toBottomOf="@+id/price_value_text"
+                tools:text="hello what to say" />
+
+            <TextView
+                android:id="@+id/in_stock_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@{viewModel.selectedProduct.availabilityStatus}"
+                android:textSize="@dimen/_12ssp"
+                app:availabilityStatus="@{viewModel.selectedProduct.availabilityStatus}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/viewpager2"
+                tools:text="in Stock" />
+
+            <TextView
+                android:id="@+id/warranty_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:background="@drawable/shape_text"
+                android:fontFamily="@font/latoregular"
+                android:padding="@dimen/_6sdp"
+                android:text="@{viewModel.selectedProduct.warrantyInformation}"
+                android:textColor="@color/blue"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toStartOf="@id/desc_text"
+                app:layout_constraintTop_toBottomOf="@+id/desc_text"
+                tools:text="hello what to say" />
+
+            <TextView
+                android:id="@+id/shipping_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:background="@drawable/shape_text"
+                android:fontFamily="@font/latoregular"
+                android:padding="@dimen/_6sdp"
+                android:text="@{viewModel.selectedProduct.shippingInformation}"
+                android:textColor="@color/blue"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toEndOf="@id/warranty_text"
+                app:layout_constraintTop_toBottomOf="@+id/desc_text"
+                tools:text="hello what to say" />
+
+            <TextView
+                android:id="@+id/review_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@string/reviews"
+                android:textColor="@color/background"
+                android:textSize="@dimen/_12ssp"
+                app:layout_constraintStart_toStartOf="@id/warranty_text"
+                app:layout_constraintTop_toBottomOf="@id/shipping_text"
+                tools:text="Reviews" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/review_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/review_label"
+                tools:listitem="@layout/review_item" />
+
+            <TextView
+                android:id="@+id/return_policy_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@string/return_policy"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toStartOf="@id/warranty_text"
+                app:layout_constraintTop_toBottomOf="@id/review_recycler_view"
+                tools:text="Return Policy:" />
+
+            <TextView
+                android:id="@+id/return_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:fontFamily="@font/latoregular"
+                android:text="@{viewModel.selectedProduct.returnPolicy}"
+                android:textColor="@color/brown"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toEndOf="@id/return_policy_label"
+                app:layout_constraintTop_toBottomOf="@+id/review_recycler_view"
+                tools:text="hello what to say" />
+
+            <ImageView
+                android:id="@+id/svgicon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:paddingBottom="@dimen/_10ssp"
+                android:src="@drawable/ic_myproduct"
+                app:layout_constraintStart_toStartOf="@id/return_policy_label"
+                app:layout_constraintTop_toBottomOf="@id/return_text" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
