--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,20 +2,31 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/overviewFragment">
+    app:startDestination="@id/homeFragment">
+
+
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.myProductApp.home.HomeFragment"
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_overviewFragment"
+            app:destination="@id/overviewFragment" />
+    </fragment>
     <fragment
         android:id="@+id/overviewFragment"
-        android:name="com.example.marsrealestate.overview.OverviewFragment"
-        android:label="OverviewFragment" >
+        android:name="com.example.myProductApp.overview.OverviewFragment"
+        android:label="OverviewFragment">
         <action
             android:id="@+id/action_overviewFragment_to_detailsFragment"
             app:destination="@id/detailsFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/detailsFragment"
-        android:name="com.example.marsrealestate.details.DetailsFragment">
+        android:name="com.example.myProductApp.details.DetailsFragment">
         <argument
-               android:name="selectedProperty"
-               app:argType="com.example.marsrealestate.network.MarsProperty" />
+            android:name="selectedProduct"
+            app:argType="com.example.myProductApp.network.Product" />
     </fragment>
 </navigation>
